Tue Oct 19 17:58:12 UTC 2004  Johnny Willemsen  <jwillemsen@remedy.nl>

        * ace/config-win32-dmc.h:
          Improved Digital Mars C++ support

Tue Oct 19 06:47:04 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/tao_other_tests.lst:

          Reverted my previous change and removed
          TAO/orbsvcs/examples/Notify/Lanes/run_test.pl and
          TAO/orbsvcs/examples/Notify/ThreadPool/run_test.pl from the list.
          These are the ones that require root privileges.

Tue Oct 19 06:17:24 2004  Chad Elliott  <elliott_c@ociweb.com>

        * bin/tao_other_tests.lst:

          Removed TAO/orbsvcs/tests/Notify/Lanes/run_test.pl from the list.
          It requires root privileges and shouldn't be run in a nightly
          build.

Mon Oct 18 19:21:25 2004  J.T. Conklin  <jtc@acorntoolworks.com>

        * bin/MakeProjectCreator/modules/AutomakeWorkspaceHelper.pm:

          Fixed typo setting ACE_ROOT environment variable in the TAO_IDL
          definition.

Mon Oct 18 21:13:02 2004  Douglas C. Schmidt  <schmidt@cs.wustl.edu>

        * ace/Logging_Strategy.cpp: Fixed the init() method so that it doesn't
          leak memory if it's called more than once.  Thanks to Kobi
          <kobi.cohenarazi@gmail.com> for this fix.

        * ace/Pagefile_Memory_Pool.cpp: Fixed two bugs with the
          ACE_Pagefile_Memory_Pool constructor:

          1. In the constructor is called with options=0, then the
             internal meber local_cb_ is never initialised.  Thus there is
             no way of using it with ACE_Malloc.

          2. When used for ACE_Malloc in the following way

            : ACE_Malloc<ACE_PAGEFILE_MEMORY_POOL,ACE_Process_Mutex>
              Malloc1 ("NAME_TEST" )

            as a mutex is created with the name given, the internal call
            to CreateFileMapping (CreateFileMappingEx) fails because a
            system object of the same name already exists (the mutex).