@@ -1046,12 +1046,15 @@ ACE_Data_Block::clone (ACE_Message_Block::Message_Flags mask) const
 
   ACE_Data_Block *nb = this->clone_nocopy (mask);
 
-  // Copy all of the payload memory into the new object.
+  // Copy all of the payload memory into the new object. The new block
+  // was allocated with max_size_ (and, thus, it's cur_size_ is the same
+  // as max_size_). Maintain the same "has been written" boundary in the
+  // new block by only copying cur_size_ bytes.
   if (nb != 0)
     {
       ACE_OS::memcpy (nb->base_,
                       this->base_,
-                      this->max_size_);
+                      this->cur_size_);
     }
 
   return nb;
